add intel charts for gpu passthrough

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:K4SIhDJRUXGBOOFLgpPMrF4mEWmekcUgs1tZgvAg8mfGEmFHKYQ495C4CXnQ6kes5T0pqsZhko2DwHLtK4IdUnU=,iv:sJ8284P6jhuIUmlodutQOlPK7RAqOhMXq3nUiaFHs7c=,tag:43RD3ylYiwKrtfrD0SnBgQ==,type:comment]
-#ENC[AES256_GCM,data:QAjbhj7vWXfS1Svs3gEv3YGHdmOMy5uiWK5yLcxf7gBKnqaEnlvWYIqBQ38=,iv:Mm+24lWWll1RY3UybHmZo4QsJ/xSYvWJSQfFCLz3dHo=,tag:ZIKgL5w0yvPNnCdugL6D2A==,type:comment]
-VIP: ENC[AES256_GCM,data:gNbLeCwpyLgVds802Q==,iv:HQoyfmCVmdWAJ2GUUmGsPK+uFuatopHXnMrxAWdmV0Y=,tag:6QMTJKozBEiCr3uHzo2LVA==,type:str]
-#ENC[AES256_GCM,data:tovroQPXghF7Aje3Ogv2nAMQu5Kwz7D0NUcK,iv:SgzFWtGBXiAv1Gl1zF/V1kvL1OG+xyIRab/WYlxKdew=,tag:GxJ3baKj7RtwkPi//qD47A==,type:comment]
-#ENC[AES256_GCM,data:t6KV9wCcz1YT40EQOz4596bkNFOpRdFrbsByQHcaR0nXxClCYgbEome/+RYVpI7xfjrq8DR+fUuixsSnwSvEAWcbtM37JGV/VJFnUVAfgNOrj4o84WUaG0Q=,iv:1duaoghZBeV9lFFb77uqPdj6gLM94OmsM5TNdoSKALM=,tag:+xkJndEggRwF/qYfB2A5fw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:tDOyrF6G1MZEn2+3/Jk=,iv:bRY2Q2Z9OnyY8TQHn0lrTuzGrx7i3ZP5zusgPH0AYb4=,tag:l8o8Uz94bFa3bVlgYF5Ibg==,type:str]
-#ENC[AES256_GCM,data:7aDi02V3vGZDRrbO+D29I5lXLuonggUqMKPzL4lAhV4M8g==,iv:1MZ52DAXbp9qnyPpTlKuXyxxSbX2MbgbUmTXbtW4Css=,tag:BTXV0/ekg8wA8ZKxJOE1SA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:QPMsWCt8yW3KJy9H5w==,iv:f2gNZSiwKUOmbNQnY1TKBD660EKLIEUfpt58MZ/f57M=,tag:+zNPjdr0SgbeiWJmjpp9bQ==,type:str]
-#ENC[AES256_GCM,data:qJc6dyAnOjoTUa9vFDK1AOsSWkZ37YEIsjJ5DfYbCAEKAzrDpJQuo4rkzwUegKc=,iv:UPWoOqiuNg9WGcr8R8K/TcELfC8NhTM5NhBazfPnjR8=,tag:ku2b1Ety3DpzkXxL2vEaJw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:hgh54k9sGFr2rVH5xEEjO+A3ktonCocuXsUjs0V4sQ==,iv:3xAqqD2vH2KCP/b2nUfC/CbcTWtBYnBi5oub6aDxHSk=,tag:xV+8yetQk1EC478CkEDKSA==,type:str]
-#ENC[AES256_GCM,data:MylZiB+qngft0e9JD/KTun/LdO+cx6n+lv7NSMH5HMsGdcJNPeROLnaLbTKn5hTFR02kUHwCtvUps1RqJBKKCHkiqyVyZSNaA5Zs3jfWDdbOZA==,iv:/i6t3bJv/lknoj1wgZLpgDHz6KCtru21gr1dsZwnBxc=,tag:VM/eUGmfp/La+SRnQo6HPA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:H1XOfIb4orL0+LKqjHFI,iv:hZr06/qgMt0QkR/zLc/+MpnQMkrH23ovboib/A9STUQ=,tag:eKkZPHBmUgdw8uFCSxmgBA==,type:str]
-#ENC[AES256_GCM,data:gI6ZYGKuvRt/SSPuZU5wIRrZogkL5J/lmuETXKzZpSq9,iv:cyuukjdC66/p5yBnW1YlOcNvVJKCzbiXjtJcqnSRDII=,tag:HqENo3S7UxWZ91TPO3x/qg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:zeuE+vURauELuvyw6hBv,iv:kY3OQx85gfm0oIxGQhVFQrB9gmV15rHnH2PXFuBBRp4=,tag:iocxOhRcivSPL4zVmJUTPQ==,type:str]
-#ENC[AES256_GCM,data:H10edWP1dexYZhklmFK9dSXPesr0y+Y/QnBAJXtbPEVemHuUWn+iM9nQJ4dxoBWT1MoJ5zWUL/4nG9RhTWQ9y1TnPa/OAj5DJppGq8/+DYk=,iv:wj9FReNxWYzeMlXjZfLafvkfXppe8TchHMEwG1sunTc=,tag:NEA8N0wEaQcwR2hZelx02w==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:ty5TkpKtQA5rnydh1mix,iv:JGfazg/2ZGa9oxu5bCj9/Dgk63jrt/B+OEEVYa/Dko0=,tag:24VrgTPegFbkp6XcxsBEiA==,type:str]
-#ENC[AES256_GCM,data:LXk2dXJUHjBl6YGz+xzIojDK46r+CN3naBUYz1C5skKLiqO8sB9vHFc45KvH12bEhqYIV5ScslNWzgV3i9OuO7ShBr5f8m8buYLkgmWwt6wgcExRTex/,iv:TTvIaCdQ/OpGVcRwifsjgCp++oDe34grKuIanTv6Qqc=,tag:mu281Ulp/kK1LeE+7R9ZMw==,type:comment]
-#ENC[AES256_GCM,data:tBpxmIsbIR/ejCxirLuklx5XrgDpEyNMEkt9WoXD+WI6ZjFTZWMFvYsG88wrvEEdjptAnNTS/zw1L431X4hydQYBMfJVfuAOzlwVa5EiqUFAM8n01Pgowv0dK3/1p09/OGMH1mwj+b3TOCdcLkzctjJcms3Rp0A8TBFe+w==,iv:ZN/MLRKCboyCaNO+HXd5zL2J4VZCxOqNmMrLX23aZ5Q=,tag:5gjQFPb5zdzVNAX7aUlLyA==,type:comment]
-#ENC[AES256_GCM,data:Y5Y+EO4iHwvB6Dst/VzNR9pbOeumF6C9bsMTxPChLmRniqwgpcBMdOAHmPmJ5Wc3eo+WLaRzGE9/60CrV9fWCcYKM46/aMLdtPzkWYPW0O4=,iv:nyb416MxSlEk6/3a2sb6ugQ/qrC/jucgFVTy09sdIr0=,tag:AS3zUzcHhYY6wZDFubdKPw==,type:comment]
-#ENC[AES256_GCM,data:ayYddR4Rj0ziv9oUflV3IwA+aziZrnwzKor/KkijUNyBaPyBceR7C9wETh3xsp0VhTgZSrYP,iv:isGztV1orULUyCo6+kX/vMWAiCyGTj9bXs2JxpXq4Zw=,tag:WnEt9uE+n4XHq0gGKEYzmw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:VnJGxWUUbc0bhfZ/,iv:a+VGdEBakxW3yFlOsIV2vpl3y1kx90Az0fHaX323HUk=,tag:X3caXKeZXYwgwBUvx4j/pw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Etp0FNA6G2nlAiLRrcICqtw=,iv:kPKlVHpjujIZBNOYbPFxpWTaHTAlgZ+pOTNtLhYzTrE=,tag:S3R6ErxodOEhACQotJ92VQ==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:+Jh8j8tosaxsgBdvJcKSbGbPtCOfji3zbYu0UZ2FW0E=,iv:WOst1RTg+UDd3QY9TMPVBOpdN1+5WYkRFThTpgGYlQA=,tag:yjYtPT51l8U9xuUcXNAsWQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:dE2xLQEn7k1dae5VT7Rs+ieAQLMxttFfvsWQhCqyTENHhAKWOaKDiA==,iv:xhlUw/cDK99yZTN5LvyzF4+hF79NKmrn1hD6A79OXK8=,tag:ztNjsNogbPDIZjR5EAGcIg==,type:str]
-#ENC[AES256_GCM,data:fglN7pK6taZuJ6PpA3ukZjU43OPyohno5AqSINeJl82B31t8EvTIJIsOs3ao+acpbk5QaRyQlth6ZaZwUy6C8A==,iv:L3kfoCA7t3d5P/6wjy+A30OQc7dlYsVvnL0PVpkq/H0=,tag:iTUX3w4Zqm45EdiCjknaUg==,type:comment]
-#ENC[AES256_GCM,data:QzakdiKWKDwSx9DTJvO8aLPG/NPCbzkPJr7SLBtezsy0Ww+TwrAHW3RePP4+uq3/Br8K+BlWpDc=,iv:pePHYhFwbEjtcesQJOSQC16+zwTb3vSsVCZGYCcrEhw=,tag:18lzpQEixE8O+ZvNhL8zww==,type:comment]
-#ENC[AES256_GCM,data:ROfwJglBwBOhgtql/sK2YZlTi+A3tpUdJg==,iv:OD3LikX4XGdKN2WG3FUnH8DSnRhrjVH/epPEuEHxJ/g=,tag:nPE5gW98wpoyvICtowXLkQ==,type:comment]
-#ENC[AES256_GCM,data:csDoYsiFtX4MyzewwG10rpfAGBKwnUGDT6YCcKeT1cyNfMmLSc4VcG7boQ5mcMlONqsy28j3HQM7WlW+i9eSMN7h2+YsX7eQmVKUuO0=,iv:+7KqfeOyULzeRctpEfG5acFCuAhFSfJrnXnMjhtHFWQ=,tag:phCAML/QrAhgE7FGsGX4pA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:fs7Tw+m01ymzLNYYmUwEacXGfe3Xzx/XjBxWY74vzNbEnkjZXHCuML/KFbQGRfcI,iv:HS4mgXwDzCSXWhmNeI+5F3g5H4ddGIYYLVtwFdCuM9Q=,tag:0jhR5+tUC91eBdIUTf7d0Q==,type:str]
-#ENC[AES256_GCM,data:P8lwpS8rl3YWv+LbmyllWrHSwbrsIHyxJb0NXscs0x2kYi1KfRVFYo4xO0lKipyMQQvvLvl12hAdxXzica1klinLbj+Ik0E=,iv:VDMAYe4nVWFGHe5rk7/avCWG93gHXw8HFTBUHys8LBo=,tag:nS7qWUu5ugDFFpZOFEZNkA==,type:comment]
-#ENC[AES256_GCM,data:4gt03u56vJZPKFZBXA3bnGEu7og6Pvaaa0x4QPjNUrsRZzi0O96pPkZXAPOvbA7SmKLOZs25,iv:c2pIAO/wy1MmIEQ6fM8rRgBHiVFzR6vZk3lggG6To6U=,tag:Yu0u6EK8mSd9fSOn7VX1YQ==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:yq6rk8LkVA==,iv:SF+DAsnHB9OfhBBUkuEn682CNRtIJcqeX77uPg8hmpY=,tag:k3rL8fJJgXuJm4UFKbWojA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:mXHzGbgG1kFqc9pXbpwg8sh+W/M=,iv:gq8f9zeWWer5hhFlMF+KgCQqkNnhjtCR6NYK7zkyems=,tag:OwqFORwG246G8R/WLNdt/g==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:97OlA4V5M6s+q/o=,iv:q4r30Do5eLZr0V4OcuGSyae90SG6WaWOT398TNnl70Q=,tag:/xTpswZQjOpW/StqVrJqbQ==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:eHfxMksQ7evco14DW4Eh,iv:2xYzzZ33Zod40LViCYPrlMykQDcsuGXMe88mHyAzblo=,tag:mMTxTZkJMNyyXx8XcIkdqA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:lessw6Usyqcj9KvkWUMNpBYZm6hPebv+Ig==,iv:N0G2P+0WHOQ3sYUB8wncUxy+tQeJNS+joksSrJlFAjU=,tag:tRTsZnzT9aNpfh8U9Rwy9g==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:BB1JiGUarYF5y+jtVRxKKQhK5L5oJkdbgBDwU9T6nQ==,iv:7yOlUldIz68pFYyWuKxtCnZMzupxhu4PhXxTkAGSNuY=,tag:K0d7jCNKg9XCZU4ivhsXCg==,type:str]
-#ENC[AES256_GCM,data:kZnJXJiFdTiKloE5lsYgWMQkrg0z3sF+0wL+Zkq51VmYA5kbQ8s=,iv:y1mlRizNEgOx/hGxbb5llCAtAT3Sl3SPcy3gu9gNbJc=,tag:e1ULb/KfDHNTnKk0/+Wkmg==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:DjJjgK7RzoAY5+ImOOO625YCIvE=,iv:LLD5iTJf0CM4pNmqsS1cLxniJafM2U3TmhJ+DCyEBSk=,tag:7BcEfnBFmw07NK3q1l3UlA==,type:str]
-#ENC[AES256_GCM,data:R/iqG5sAwSB/fuxtwGY=,iv:M9qEuoLHdhZhxf0BmDKiscs3EXT5S/dtj5+006seFRM=,tag:Qjh/7FUYNIIG7MpMRCSWVQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:SIJX9CQZ3uIBBtDKDg==,iv:e58KKSyu37zsCn0icC3vUTRigrAgTgEMfOQgjoaJqXo=,tag:wyqcy2jOH3EUruOkMvf0hQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:qOshny+2vzhldipgMQ==,iv:IX0iQTVVL1ThCYmJZ9yfsMziKYXbE9UklGL6AKOLXHE=,tag:RrZJ8X9Zsa+qNfotqTHaig==,type:str]
+#ENC[AES256_GCM,data:fwYmzJUXPvkbtZqgrsAp2+9mzTsFSfGATWJj/GdgHFLHa+XwI7oVvZSTC8vNQHXOCEgjeFaHmpAoCu47wBGo3+0=,iv:3s9OwwcXhOmZMHB8kiQcJJRp6kMBzpxdWYJiSv18Gmo=,tag:vIlEMAQC5qVR+dIVS3Zrzg==,type:comment]
+#ENC[AES256_GCM,data:VreVGh63iIdirDRsEK84X0D5umX0u0JEhYKcxM2ER3BDmaKUbTnP3+howGo=,iv:Tat54e6PTdwG7cENC2lysqPlq3stDZ6PzUjM6dTIEB8=,tag:ogsRBLLaT80vnF6xQRbqMA==,type:comment]
+VIP: ENC[AES256_GCM,data:mmrI2rYHYs4+Qt0kCg==,iv:nKgSOJeaQZFUyUqAJIULtqu1vArvC++j5ek5eYH5sJs=,tag:mB7hcr/YDVv8AWDLE5A79g==,type:str]
+#ENC[AES256_GCM,data:642EvJOtWF+IfDyeudZqc1L8LuKADNd1x947,iv:7cBZYELVtKubOXVMqgtJmG1/x72aPuBNLFdN6Bzneqw=,tag:tUpCEM+H021JbGevok3+CA==,type:comment]
+#ENC[AES256_GCM,data:WFVotPobkm1rWCEPtmTLAlp4BvL1SrJL6GHYOMiMub7mcZkxvH/JayY92ZHkihnGgV92j+z+LxRynFKbYbP/AmnN8bXpmBZQ4Eqb8sJDhUHexC4VqXSHbug=,iv:7WNGFIsqlJgOu3cllfaB46RLkNC+GoqldGZrSz8jgRw=,tag:rfUFlDnb3eL00nM9ZzqUwQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:CwZnEGhL5Mm76kBGaE0=,iv:CII2dgXf3NCMZRkGL/7wfv8lxSFSoTLBcCcC6PA8VSs=,tag:oIoJ3WocR+6Ch1O6Uu8Usg==,type:str]
+#ENC[AES256_GCM,data:ZjWR1/BEd7WX/REVZPDnb+uyuf/UY46WQQWHybbuj5SWpQ==,iv:/A7j/zMoUoXfsbPeaphiTFrkgWC2vQFYrYeDV93gyA4=,tag:RamPpHfGNmYc11pm4HrF4Q==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:GV5gR3dNmrzER/Ku4A==,iv:WuTffeTO6MwueGnFqp4ZrK1rhGylOPu5ciIexsmbC6I=,tag:4K8sF6cOijV4zWM+/Cpy9g==,type:str]
+#ENC[AES256_GCM,data:kHbQlmvYREP1AaSkECP8drV/bSOnAoYJ0a5hGauiKsn6OSYP/d/h5lo6st1X2cA=,iv:cIIvFWP7VrTRWf8m3AzndrKJICKV/hpXZSOeRva5Q4g=,tag:C8wvohkSy0lCxjR5r7GywQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:pUrPkQ7a8ALV8VfpayWsreadmE0+DGn/oI5mO0KKeg==,iv:blzWQ+GfGJQx7EAP6iLNpjNuJ7o/CYsKG+G9y5i1JdQ=,tag:plfjVLs+gVizj4epfFhRjA==,type:str]
+#ENC[AES256_GCM,data:PQ8yqZy3vcs8u2hJEukNBAACHpIXwvv0cg8tsexuqakQzA9zoQ4WP42brdw9TBblrb8j3M90jgaV51AootLBed6KRcQkBBfZrq7u/aAxBPhljw==,iv:tylGG1YYO4ireQ2EUGOMtkg1SnBXpt7KFsT8t5IcYnU=,tag:JMnLkxWypUQxYi51UiBmkg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:xBxAXiu8n3IrBgN9R65H,iv:cBNZa78319bW/WdQxtfrsRtnWnIJ+Kz1fGckIDjwv2Q=,tag:j3OiSzl0t+dQfN1rA0oOzg==,type:str]
+#ENC[AES256_GCM,data:4UbsaTdjzhtabmh12mk3pfDgWtDhh7AUAcD34ETECSLc,iv:V+B787MUrcng8J2HLdukW0d4YaD8S0tG14I6TYV4QPg=,tag:mn47r34nlbzHAYRL5ExNow==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:jAvpMmRwKa9Day28C1yM,iv:3okmyqHQyh1lU0nZRvMJLl39Ib2jO48P5s/j3boCYkA=,tag:xo0xROJfQ+uNwD8us4mjkQ==,type:str]
+#ENC[AES256_GCM,data:A4itjRt0O7intUs578VilJkFSwXI27f/+nP7EU1KfDYY96fSPJjsgtxP9mM1JmAf2n2dlGZtEnekh6UdKZHJDoxYH7QetHS1gZl+QoUXH9g=,iv:G8kEnmafHngDd8mXcYkf3qOu7ntk81cBnyA1v1Y4F4U=,tag:Rw+4yUam5C5Cdbh7/ER7Mw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:dVuaabM15Dw2pF2A/jjo,iv:2QHXD4l9cchyU3hYiCt1bsOV/lGLCmfOIduMqM0UBzo=,tag:20SUylxeDOf5Q6xifzXRTA==,type:str]
+#ENC[AES256_GCM,data:uXhlUoOgS9V3VzpI+/s9/5+tmzhJS53+m9LE88+mYZs92xabX7l5D9J/Syro2JwbaHX+hlMa3ZFRWRmJSEVXtZsJhZoEW/hljIv88VjxQ1IzCGFzaHOe,iv:+EYYcC4Sf1MbOSy3srIAzSDbKE0o5634N5gOeSsxOK8=,tag:p1MUbCAVkGS+hG/VCghQPQ==,type:comment]
+#ENC[AES256_GCM,data:DZoqgQECJ/p7PxRWnpNyB8NTvcuTkXTa8rxkO1CbvOcSepG+vXyWFKvki/gyP+cqfF/rcmnFRVWHhjxd/wC/8hcdaDjIb+Rks9+RWye1lsOmPewb7GkAz+YxPmaLBqnF7yFg2qTZrw9cdHTflGk8iPCbE+pEc97EDiwgtg==,iv:4x3aKPLPe5q1kGYDC7dMzJssUggV1PaCHGCyHVwge4s=,tag:savIx+0LNKIxQQhU/MzqGg==,type:comment]
+#ENC[AES256_GCM,data:nPDKY192eqmg/tUFXMR+Q2HY/v9a/pG0hY7Htc76pLIfw6dLr9BiwWQoPv86tXaOKp1IIyUzarMi819oB4yDR6rX0z94NY0E2q/WloADZa4=,iv:oARn4qHwzcT1ZzZSKQLdFWfilGxAdPKY0s9RoJfsCpI=,tag:pfC/7ROKsgWPeWSin+5nzQ==,type:comment]
+#ENC[AES256_GCM,data:lTWI23uVaWuS3uhO9zkEChcms4RfEkPmitsedOCRoW0jvFf8kUkF+CkQswo2UjX7lSMrKycA,iv:5FrLCoWxp8s7TRwLVdMRRvFv+ZMlfCqUqHGx2h15cQI=,tag:acMFa5u72/nUa+RUAME96w==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:GZpvQp7M5sqet8N1,iv:MF6aJA1vOj358A/RoSnru9bZKqBpf6ZnWd2bJrZ1mP4=,tag:GqjTRXAJMLg1aivgnyi1iw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:limfHdBAbslT8/7vFSICalA=,iv:Xulrgd0YcY2WkT8phcx+Weh8ooMPJ5gnxoPReue0LGY=,tag:Y6QApl1t0NzCERM3dRLuog==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:vMnwFFBAN6tO3mQr36IjuOg1rls1xuvGzU8zWjHUU+o=,iv:Op6wgzW82HJGSVxxjA0KRbLHkBb9vrC+jVIrCFSblj0=,tag:KcnFEDnk0arEjUfSZydIzg==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:B4nbR08/weID7UXQO+V7DFdd3FBGiAPQLsSC3nB6w+z3ekaG8xi0Hg==,iv:pEAgJ+fymCqVtU74dxtH2vM8LWcrRmjE9DMnn8Hk9uo=,tag:1rcQIvEzl0yN+oQQVsIO3g==,type:str]
+#ENC[AES256_GCM,data:+oJqePaPAEQDbzJGkrJQ3Kzy3ea/FSZ8qmcvWyeXUmAj11MDjscEM7QRhUISG9sc5MDD+Pd/Zn82hfNGqAogwg==,iv:tAYWjjCJM20529N9/AdWjD/TL8f8+dN+/XkTGt8DDgc=,tag:kFb88551j3abSc8zPBuwfg==,type:comment]
+#ENC[AES256_GCM,data:ruzRhMogMKw4th3h38iO19O7p5aFyjagf5iW9iFQggm2jM91ZUQVtSwrRD3yiSqTI2RyilGcwXk=,iv:sAvGnh97yIbHvXY6ooJS7hsLLIXZXs4M5UvqpoHf2L8=,tag:xDBHLv/SknQq7junDk+mFQ==,type:comment]
+#ENC[AES256_GCM,data:OK4QfzCAW2CJJKj0OsXFXcw6DStuTvO4XQ==,iv:Km7Qz/UA7dpGd0m8/y9Qc50ySJwyKdc6OkwT6cBvvHQ=,tag:byJmglo5XWntx7BwqGHYkA==,type:comment]
+#ENC[AES256_GCM,data:Gcuv1fzG2c6eQ7sex1Hebh5Jk+9IyQZ8EF1AKR/wGQWbjKEnKXEc3f7bVL2a4eWQvQOD0PAyBkloyRm/gS9suT37UH7pUe9hkrYAPD0=,iv:CgYGxEfhqDRT334A+I7y8ymCRgNo61//6GB52TBFi5U=,tag:yGZv4aR059WduI608YcJmQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:auCsUFHakGJ/ggLa+lQH4eOoU9ic8TMoHZ6hwexQus1kti3n8DP3Zqu35qXFklTw,iv:qqCXSQNRDRrV3yDWjtbJlUEpFBeI6Rddr/b3zD6tWXI=,tag:h5uhhLKLQWyQ7kYrWY3ozg==,type:str]
+#ENC[AES256_GCM,data:K7q0Hr+JFc5Eo8YswXiDtQavBq0RovIC7TkMMlFB9QrkjPtL907zYBNNShXtslVYNQUrKtfS2/ksPz+gZXlv79PQz7SlIlY=,iv:I5R3TOzQoJppCnzxct6bUcIjSfFA2ApiJUXMaQMyD00=,tag:sypIL38GhJ+YEzogbz7Hhw==,type:comment]
+#ENC[AES256_GCM,data:OXXkJ5/SLH8z/+AtzE9p0gkLwGMCBmRY60QvtNABbT5VYrHDhe9IP+Nrh55whP8OQvb8HLwD,iv:AYlkQyGSED+OCijiRl55ecIhqCmCKFOallYQuNK93IU=,tag:R7S7PDza+5kLV96zGG8j4g==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:s6ZF3u3FuA==,iv:xiXCI8j/CMAen1ft8A7no1lBGuygQ592QrhOF6Kni5M=,tag:ZLCkQOoXxzL2R3AVfVHgWA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:gx9kBh2pyzbGBVWIGV4t3yrauUY=,iv:CxzmSJxw5t3ts4YqVkYRB61P1m7f4jyfUhaH7D43vf8=,tag:bXGy1tYYvJliQo7z4VtVbQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:V2viO1lVD1ZvIkA=,iv:Od/y6RmODt70ENrNjHur8w2aRFFqbryi6Fno4xc6iWk=,tag:pdjHtn2ecGayIJToAvcfUA==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:TMMJikdn5xyDWfprNsTq,iv:5g+jNzXpQ68eJA8DRbFkBF156mP0xPIlNaPuc1JB/TQ=,tag:uUCk62A0Dywooo6N9ZLtsA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:0vkTmmLFJxY93f4QRdaNgLhVn4sdMlkxgg==,iv:YfLn4M4i+P9sHK5EzSH/EQ9z6ZTj1sD1ohQZ4xCZQYM=,tag:sRPgz5XICsHLD+aQCIIdYQ==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:YAbfS/1pQKpoi9i1pwBm2lsoJ52gWhmcNTnN9kVEWw==,iv:UCmoroJIIMdlC4oEZBCtIC0L0EtdXqLeur206SAH5Gg=,tag:Y5OQRhn/enb+SDXPjn7wSA==,type:str]
+#ENC[AES256_GCM,data:he/mcabQNApZfpClxUaa1IBhiLD3lKxIw8hWHuVmXnbfkX2gM64=,iv:FiFlPMjvvkoW1YVTGNItHyWi61v8+j+5ofPzJso31HU=,tag:FrqvgnIByQMs8u4+D6q8fg==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:vmu/GVqEBY8vhZkz3O7XSU7rrxA=,iv:OzST7N+ntPoLQWbZrcpj159UxIdL/VVNULwQbeitfbk=,tag:gVM3YNHnd1fo6HGf0kawwg==,type:str]
+#ENC[AES256_GCM,data:ziypR52b4VO1ssE3AKc=,iv:fdXQCXXfNgjV/NbRZfluemPBcPtNc8tk8MqSI0OpUqw=,tag:jnw26Xs3o3RDW/S+6qAH4w==,type:comment]
+PODNET: ENC[AES256_GCM,data:ewcagkMRtiBPZ/E/Rw==,iv:x7YVBWjGrx8C1upWeQ9UdL92KW4J+AFdgg4L12QHEZ0=,tag:ulKNqGMRAQGDIPaUxRRwIw==,type:str]
+SVCNET: ENC[AES256_GCM,data:dT8JUagJnkffyPvtCg==,iv:RVTK+MuZe8V0Qiu94KR8a+q/ct6LV9YShFJGmP9xfLY=,tag:Y4LPpEJim1CWEdJ3ae8zCg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMQjdCdHcxN1hMUkE5Y3Jx
-            aUJ3SDhOelV2T0tLTUdBL2xPUkRQaU9xczFFCnNNL3ROYW9lVWJ3czM0K3VsVHhp
-            ZHJGY2J1cXdqNmpwRUxQWXhnYTFjV2sKLS0tIC9LTzMvck11M0pieDZ0QndqVlcw
-            RDN2cEYzREI2L2xUUnpkRWFnK1hPSTgKcGNFQ8vppVvwzdbQ9HYBjjb+ijlNoWSE
-            UnpteGfRGGxGiXPcnWC4Ks5v6olUL43BrP9uiIH0IgT0NLS8UKfP7Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMYkxRYVBoS1FKd3JHeU5R
+            eWdSSGd0NzB5MDB2UUpGdjhjdkN1SmdlVFRjClF3cmdCUU92VWlyMnpXZXhMNHAr
+            YlpLOFpjNEpMc2hYVVBnSmNDaktwUTQKLS0tIFcwb1JBOUhuNUhWTms0bDh5NUhq
+            T29PV3BhOWFVU2wxVlV6aVZld2lHSm8K03B1clSw+9R2PvKSMU6jwGYawEcnHnvN
+            ktmEp1/ZS/L9+49kgm19IISvBv1OxzpUb9HAKFPUXn5MskhgLnx2sw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-18T22:46:41Z"
-    mac: ENC[AES256_GCM,data:OR85+OqNXPTm2CzqC5wM/+dmSUfetzPtw5AF3SM2t6V4sBVX6GzCP6CpDiiBvE5FPlY97t4ET9oWxnPtKfMyVkmHfAl3RKu0PML3nqWO3MKYtWoTnzAMNsbvv9KH+SY2/AQ6a1uR5++W/TfdD7F0SDVSds4Y7zkw+PLCAB745sQ=,iv:pn1FumOMyNAfbLJigdJeZv6eT0NKgHTs9RQrH/6S4sI=,tag:9JNVpE4DO2IZSquH+N96bw==,type:str]
+    lastmodified: "2025-01-18T22:50:44Z"
+    mac: ENC[AES256_GCM,data:SlNX6zB4lqFV9dhlhYlBuFvbZb3QFini7KeKGv5DU05VLRkz6NH2hdOxyg3zrsbQjFvoeR5tZhtp6tDLsYY2rh6OnCVmJysfG5FZQTkQQqdjpxQVjZXQdGzHt57aj1OfMvE/b91Pn/8DtN6mDf+9THODZN3ext2dvGwspiGviMQ=,iv:ayQI6OS4/hlRVxN+MvR9eGdlhFUkaRrIQ8YWgU/Ze2w=,tag:nKYol8oyTZWNyWwiPp2gTA==,type:str]
     pgp: []
     version: 3.9.2
