--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:EB2lGVL0ej1tIFgi7KCR1kHCB9vjfH9cyh9e8z8QSPkpTUaaVo7Re6H26o58YrYmlpTn81CBEUVvbkFk9XZF++U=,iv:lU1zIFV0lHM4e31e1e54pHvx/vKt+9n9qI2uzeAN8DQ=,tag:SYxseJUxCck1SnrtuW640w==,type:comment]
-    #ENC[AES256_GCM,data:Rpf3iT3daAAUnwrIA/aAXs3kJrO1RI2Ytztb2WYZFKG3VBNSOqS0q1XpvhI=,iv:xgkleyOWhqhWfO/37dLsgaB1jVTUuEjnkDZAhfiYGxc=,tag:XSLyMovQmhD7/PSzqk6vQg==,type:comment]
-    VIP: ENC[AES256_GCM,data:fA3ULhC9zX3VFjrHMQ==,iv:VuUzimvePjct+LOSuN1Gk986CAuPLOzD5nBzPDltaKU=,tag:jhxaRuCcKEtY4q+TPActOA==,type:str]
-    #ENC[AES256_GCM,data:xu3tmSUiFjK6FvTlTHHFd049qGW/+GqWZWQR,iv:izaGwRwlLFn2vTnkbvGAGQsHeKpGP2ng1j0f72CviH8=,tag:sbRnNn45mg4gzJYsGPaPMQ==,type:comment]
-    #ENC[AES256_GCM,data:DwF1yG11H+18pYoSJ47q1dYGvL9F+/R4YrYfAMsgj1VTofZoTSmzpJgJ6iPLUur8vB30UXWaMrenI4zQXEx4GCXsQTbn6qs8BfXMcUP8cPkozG7ShE7znXU=,iv:EWbiNEzUh7hPYdC/hhq4rKLxQBMMPLu3LlyWnY1AR8E=,tag:9fDTs5JqXUXQMEtzCy9mTg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:MpPObIbsMFbRYM5nB/c=,iv:rzOdD8ZX1VKlDluJAkUDys4AHzLz7n+inev1ibMulVE=,tag:Lhz3UVNqrOPDZ6yfpk/qyg==,type:str]
-    #ENC[AES256_GCM,data:bUsVk7jArkNlyguGO8+tA1YMbaMH9ICZbPHsBXGW1L/PzQ==,iv:DUOEdTIdgrIViYz44Bp1YbvAx5n8c9gow0bJuFLKxBQ=,tag:E1YsTRdHGrDFO2ufQhh7HA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:7lwPKZ0nJalXTRL5Kg==,iv:GBxwJGyCId2xYEkhcayHDjrJqHFneQT/9gOs+qBSSdw=,tag:afX6FyoFGErdIbOElcmyHg==,type:str]
-    #ENC[AES256_GCM,data:lIzheKDGmJHku3AM64iTAvsFcJR/DqHB4SGAz6mKpV2VaBRKNOlBkSE3u0P4MQY=,iv:b6LljgS1RUPxj+S0y1RqwffnJoRDURl/6K4CIzVj1nw=,tag:0Ij8ggyJkd9R5PcgN3rw9g==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:ckdCDg8p4eOxwTqcKxKJcA7HwEbwxI82eM+kN3Lt7Q==,iv:VN5YQdo+W4x36MUFDfgZxl11eN2R2q2keynhFIgnE0I=,tag:zSUy8CRn8d2+SH85X0p3LQ==,type:str]
-    #ENC[AES256_GCM,data:FD0+zr/RGH4jJLlTlC4M2ChRExkAw8F7jzI/71t+C+aKasifQLafw0u5Vws75liubZTpwqD+Nk7Sr6CFWl3xTnotHyFZflIIVPGl2QImQZsB+A==,iv:h9BPsfPTrwIC6PXEOHfqfvSZ4y1Ai7Pzq9OuC82aRjc=,tag:N8TVE1EMuzHB6Jz5sR0p0g==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:g+83uGEaEt2GJMMHtyse,iv:2V+cPnmYwOVW1AtlgzIKJtKRtGKxvOCN0Vj/wL3lxQ4=,tag:irx6YtQEA6hT0N3dcxqMjg==,type:str]
-    #ENC[AES256_GCM,data:8vmDa07i2UCPriY2jV4MmCJwUYCwY2UdjRCCDnlqr0JF,iv:fD+nI0Me7hb2r3TJnL1iIw/lj+OdfXRbfWwChS9abbc=,tag:P1jdQ0S0YpJWHEOyZYLRng==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:02JoDTFTfNKl9uPoJ/e/,iv:GTsbFbEfhrZgTK5U7E1wsht7fh0zzMUbxol6WCAtzWU=,tag:F6ljSrkBXG2QlZgSOvDaVA==,type:str]
-    #ENC[AES256_GCM,data:ItQlEmHCFZnH4ne0ErgRYPCcmjih2jEA0VkorIRUOGeEJQMmtUmDyQAn0BVMsiQMS4Wizb0mS6isDCVFpIG1VUUZKIOQU1KCt8JhFKsOLjk=,iv:OH9VUXN8JTj4iMoz6/nB0EpansdFt5brv58/bN/pV7s=,tag:SfPonaO7zO+wFiM+rT5cOw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:k2/2C1Lnwd5UdV2uEVWz,iv:NaphbfrfWKh5H/lEHcBmAgGB38YVPcoNe2Jq8kr8Dfg=,tag:zbWquHmcHfhArwQrKRGlyw==,type:str]
-    #ENC[AES256_GCM,data:/sT5/Bcmwpx8K6Gb/4/yoH+zVOpTOG4HW7uIFopNAXfIVoqPRf9n9w108C04rtIRkhrwSe0f1Ao8wPlU0Yucr7ycWdcOdJkF/XamNntHPA3QmyzcjVL6,iv:0kAUCfub4g49BYbivP7rKRM068vDbGV4vZ8NagofCw0=,tag:roh3ydMRzDftm7RynRjP4A==,type:comment]
-    #ENC[AES256_GCM,data:EvF5/iTsvMT0jGB41oafAGW8uNvgMsnS75BCLoUhInkDiHl9yLWW/G0+sZ8s0AIekY0bev735mqfWSZQnrhp0FtypOay+Fkfyq2C6noOBih7k6I3bu66pgRw9Qx2j/NOfFtT68Om720c5pR6Sxq96lLrh/M3aFYs4TB2sQ==,iv:bG/AL+NfFmDB3Qc/PDHOfaste+SdJzICHTRptJm93kw=,tag:SMf6ey1sS9SRyAjFnscpug==,type:comment]
-    #ENC[AES256_GCM,data:ubATr3bg0sdaeM0+hYPjnQEh5ztR2RJZ+wRHGg6afO3vHosq9rfVMWrcnFgmYdk0hO6UkayYk9V0i7pzufuhIRw2xpTt1Lu5ITmtkEvzhSE=,iv:Fd5t9sxQmQ42YNNovZ9lC0DKuk3jbRsOjAr19gRxPt8=,tag:ARo6hmfGzLGYyW9wXgIJ9g==,type:comment]
-    #ENC[AES256_GCM,data:BcBPGgeeeVKocCRVZk5DYXlbCG1zVzwtxXXLn2aCwp13LP2ArIzLuUPYffWzxOXAIVovn98Z,iv:qs7ANP1YYDy61/AQZ0MMG3MYBdfslEZF65rFGMiDP5Q=,tag:sK6rYYyt8Obpy1RzOvboDA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:DsDCqUj462NnmYeZ,iv:btwcZm9ZwRC8ggqkinxDwT1EkbWzBPAQNlxVybICAHE=,tag:7GFVo0N6KNaW67KWKckYWw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:y9Phy1yT7H6DYRKHFyl+SMI=,iv:4uQRO5py1aOQeQnF3zbKkg+17GYgGDNi5SKLF7wTRuw=,tag:O/h9Hg3kCj3mSc17Tgr/MA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:2xuc0AdVtfxe+nwC6FuoIGWs3RGnj7Rgi80E5tK9yCc=,iv:A55E4DFTBVeM6rJPdw2486RSUJ4vrMRVPDhBZjScnMQ=,tag:cDeZn9j9X5j5SFOWvuWY0A==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:p61YYKWR1zoYbMgX8WqA1+QKvwbXQAGRN7T6QOtcOZ1HxmltiysWZA==,iv:ArKuh8yfT2qVzil2nhI34YWXGxep8d8lxK8IEF+jchY=,tag:nqgMV+C6aXWpgm+LePpF7Q==,type:str]
-    #ENC[AES256_GCM,data:W+ikfXLLZUKSdLA0sFVhaIRSlNKJcIPeGJS0q6H8CfyLgS9C+bmWgyxdI0x7bvF3EV7HM1yMS68XUm0uE1NcxQ==,iv:1btWPqE9hpZyOp7cR7v6y/GwVJ1TI9GZT6JsPkeD3oE=,tag:xO3/3+DveAZsA4SL5pHcgQ==,type:comment]
-    #ENC[AES256_GCM,data:3U4S+k1y6sVCX4AfW0UxwF3TUvXqKiKKrcSbTrfxlX1NrSgbFVcG/uJuO8CY1XWfgkiDj8N68MY=,iv:kSNwUj5V8wxVjSFUYfY/n5ZZkEoNn7N0th9uPHmku6g=,tag:IX0PCVc+LpWFgvJxxkjb9Q==,type:comment]
-    #ENC[AES256_GCM,data:fTEfEE1E9DgnrldStbJqbpUsYoaWlUf8zg==,iv:/xnkPBTbtKVMn7rIpdXlw0G1RvP+PJ2AXJZzoYVciMs=,tag:QecLZj4HTKiwWnlSv3o1rw==,type:comment]
-    #ENC[AES256_GCM,data:A0NrIkngx2NBRIH6CVK9qR25W9zunJ4aJqA9y1177vMluqbaAzFpIsvWsH52lXy+tYhzUeLlgmMRsVuoP+w2w9LHp6nywJ8XGvN3aSQ=,iv:AtWBatW6y7KJnOCrdLFT29LCA57tbeFJkz4DHxHjuug=,tag:qTJDUAvW9jKbHgaQTKoy1w==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:k0zL2iF1IhVKDZd5AX+BR5bt+8mej1+E5gBrqtJs8p2cTRAosUTFFdeudDwvjwRa,iv:DrPPRmjcBXcohSRf7hDEPpPGbN85ScHZniBk8udx9B8=,tag:uhn0AfOomTs1KdHzF+/Rpg==,type:str]
-    #ENC[AES256_GCM,data:GhS6fw/RfK+cqVH0b0ZwTLirzM5G+PLtoXlfVXe0NcuZx0kAjNYnU4wkzThRj8AJg0ch/XhJkC6ylM/S8sSL992nyQMqcsc=,iv:MZLdmqinwoal03WNziyT5ATnXtM1tfpCRWx9FBktLsQ=,tag:kD602cSTL9fof5mavIreng==,type:comment]
-    #ENC[AES256_GCM,data:eGZPjsjWwkctaCMzj8K3In98OuoC/6LCYzXN9xEzEUyBHdWv/Z4xJgpOdYqf+15xzBTIxlXn,iv:dQ72bGm9AAB6SAHYYoUiAa9a1so7UI/RDAHo268iNtc=,tag:TgZ2u0ns8LEvcdwlW+gNBA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:A5IYuVacmg==,iv:HEe7kGZXJc3RTd4lOFojDyZ7CfNR0PeudWzhN+jBBqM=,tag:A+bokh+0/JNbLeUh9mXrxw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rsb0w9lfWT8K7ISHOKTfBJ2TPv0=,iv:8VYwuyV0qZ/+rwLMRDnckW2uUn/JGGoUDxaU1hEcjls=,tag:BoZWj75//dWs4irsIXFHRg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:hPHHuSLL11af5aA=,iv:XtzzipTKd1s2kchHYneK3D/PvimPluhtGNttSUHo5xk=,tag:KRG6jsdQm2M2RlFkGDvQ7A==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:10mGkUzFNoGI8gOT82l2,iv:TzN6/D4IDCoBWXRTg9DDm83ff2LKKHSzhzbzSQeAQN8=,tag:daGJ7NQsho7S6q2OWFguog==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:ra48nk44A7t5r2zSC0sbJDOyz8u4YCmbOQ==,iv:s0o6Ss3HsBanrGT2bkbSiaEflu6WoSFUQilRW8hpyXo=,tag:PRK2mwJFPl4ceoyLpNoouw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:cmlP9tTcjoJHjmk4uR07AYOBIf2GtfW5ayX9/q1jpg==,iv:FUplu9CwHxlP3dmaQOLNsIrHu6z6TJsRVXzbNypgc3Q=,tag:ud586kxA2qpr616rQNFfLA==,type:str]
-    #ENC[AES256_GCM,data:OPRiNtytubPYWD3C4ZvmrLM9zLi5iaNlT/ePh6wrT7aDpRL6KRM=,iv:JpKev+EWs0nTIjJKOup7WxqX7ZqDARKhbxmTL0ToOoU=,tag:h1j9rMPx8iUxuet4iHrnfQ==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:zRDJ+pexdkHQQDwaSlLCgwtw4yY=,iv:YUncEMFGjuHS7yEmQhKe5MMeGM3KkDP3FT60/GPxmg0=,tag:ToYcGJT23PkzNgQJbdR5dA==,type:str]
-    #ENC[AES256_GCM,data:O2otFtkRYGz3sqWlYJ8=,iv:56Pkwq5JRzrQrPYYS45a7ftm60Dwa0CZR1T/Ifi6dpU=,tag:moYntNbatuD254oQlcLQVg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:lKfErPD/JnJg89rn2w==,iv:Ol3AV/4xLbtlmsfle0yQcnwyoicSYYw7dRwrWBWDYTU=,tag:YzX+UhW4dLrNMrFpUHrRCw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:CNWrUci1jZ8hPjidOA==,iv:Nu40jmNRYyHJEXl1QCdJ7n96GQT+w9TB/DyJ1Pa9Ddo=,tag:62pECS8jktxMvSTntP+RyQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:CPgLHw==,iv:nPVZdOAUA9BANKJM+wSlCCIGspKJesGZbQZhW8fvHoQ=,tag:67LLkCt5vh8oagA4T+1kYA==,type:str]
+    #ENC[AES256_GCM,data:y7fAHh85sRUYem9QOxtpE4YH5leTTnj5x5HrYzIZiuvf1eD6Q03LdaF35PESIEezxEIMW8fyxmDv7YzsPz+InMU=,iv:FUTdvWxeLub54J6YH8nyKg4sddWiP9aV2qejA2n1Xgc=,tag:Elpn+OnG2kc4GqwMbrL72g==,type:comment]
+    #ENC[AES256_GCM,data:zVEXl4PdO+XgXyMAlc5qk0ob1qevZG6t/xPqHby6VHE8b8b7eRoy0Bx0Guw=,iv:1hTvfpCAcHU8SM2cj17GkZOmNUSbREgcM4ZL9HGZbhQ=,tag:iStor+U6PuflvttznPhWng==,type:comment]
+    VIP: ENC[AES256_GCM,data:Q+jSEbYB2iSfqVUwrw==,iv:S9L6AqpEMjpbH9BBNJVdmM3UWgsbsTq4Nzr/MlZ/6Y0=,tag:anW45EvszmQUgYtmN1WAcw==,type:str]
+    #ENC[AES256_GCM,data:5sDoBQh1IB8gvvDcP44ioBvUj2iQrthlCxjb,iv:7jYFfyLIn1J8xZ3eYN/sHrCrsTkQDOrQ8OqiLx+w2X4=,tag:G3UQ09d2kprcnAbGKQkg4g==,type:comment]
+    #ENC[AES256_GCM,data:iGKnoeD9mPNMvqYywkRWXcxlOuq4mQXQ31jMQPhEgeo5FkIqSe2HrywoZt9cRtdAv2AkEnQv/CpYuCnZIe6w8ylYY1/VDDUep3jYG0lBR9VLYlqV9z4q1X8=,iv:fqvQN9kpDySkIkBtvcnlQsD/jRrbJ3OnzwaBzCVA7a8=,tag:s5iZxuefwMwTxffxuT4+6A==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:SiEzVfD9v7l8d/9rEoQ=,iv:qmFuDKo7MPGg5DosP9G9/mqD4iCJB+nKrdVR1Y/pkI4=,tag:7ZMnw5Qj22A1WXBypbRqhA==,type:str]
+    #ENC[AES256_GCM,data:Cof0q2FSMoPpKvAbUr9LiBl5OUccGsuJGmuN0zdo4M1iBA==,iv:zExA12z/xdo2A5zxyUBFc4lAD4Q6A0Y49W/RBw3au3k=,tag:oiBphp2rq7DaaV8SOq5Rdw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:DAaIDcvlWVOltgzhcw==,iv:tL/QpNn6UknJtDX386TqDHmrahVrE3Dj3oybpJoMnn8=,tag:07yyz5VtINEwn1EA+slW7w==,type:str]
+    #ENC[AES256_GCM,data:C+mV2mXxJIbZBa5xMSk83Zyhm+nkl0F5kjCJ+OLuC364RPyGa41ZlPRCM8HEXas=,iv:+tZmY0wc2stAFo1eNXo9PR24iiP9gk5KeBBbgnYUTVY=,tag:n5WgGTN2LAtEZARFF9XTlA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:Ws4XTqZiW74ITo5Pi+iwdPaH8blk4eJsEDvXkAaRtw==,iv:NgfZDqSOXwjpyQYKihAj014vz0npISfWp7WE8hLWztc=,tag:7fn6b5rmY3TYpZWzZYxAxA==,type:str]
+    #ENC[AES256_GCM,data:UpAVBL/xkSWStC/ErnuyzrVOS8HS31u7QiSiVM6+2DzO4J0j3RM/fhllp7vEZ8sOuEaXlq7PGH6OQ3I1WYfEGUReBwsgZ1bwFozKcu3MaYBicw==,iv:U5mbmxWo55n9B1/xG/tKwoWTuhouglDxEQpZHfBlV1M=,tag:zScbZdA2nZT5wlredmWanA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:czNIjDq0rH6pDuqeSk7O,iv:9c3mA9ZbGdHEurQbq7YssZt6Wc0Wu6/6FMb25rfKFO0=,tag:8mHjnzYyXxW85b7KUqFAiQ==,type:str]
+    #ENC[AES256_GCM,data:2oDrznqr8qbmaAqQIWfVn2YI/MkUlh3O7nluLXVZoTW3,iv:U2yrnzvGDFlkdHzTfDRVvBDmtwbZ+IbjJVzMiwp7Jjc=,tag:aYhS6tNbGnDlYYQl25/TVQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:ukZ79LBKwVoAXJZTjW/Z,iv:UUxiIl7EKxjkFiPB/bUCsNYMRCOZfCgELntSn6QwB0o=,tag:M9xcAkTZLEY5lQnTGiuzbQ==,type:str]
+    #ENC[AES256_GCM,data:DT/8a061if2QjWO+4+zdWo5T/evi/605OLw9rJIGsWnkxuXUfJMHaTf7cjDIiLsyB4HDd3tU/7/6SpeRwDTnxvzvK6I6AJYhN4mXwzXywkc=,iv:EAx4AmK8Vz/0DprALvDHDks19VdkxNMi9DdiDHGB5CU=,tag:7+ffwqAyvOz9e9HEvB060Q==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:QHVhBIZgujGy2/f9MgBv,iv:gcQv1iwz6ZRaWTVrSpz81Rh8XuwWLf/+oeR13QYBfeY=,tag:y9ZtlQGwC6YdiidXSleAJw==,type:str]
+    #ENC[AES256_GCM,data:OycoVMQznQYOV0F3Znpkl0jOaQ18j5b2o3uw1a/gI1JG6cn637Se0YZByVq8axk4O+RAKGfq5cksZMbhgFDJ18vWAQCgFEsJvdCKRif4bGfd7hiC7g5S,iv:jWmxnPfvfvLpoNJQdou9o1wRS96RK17EiICINS0c9SI=,tag:VMVUbatkjjCUc1y4OaL79w==,type:comment]
+    #ENC[AES256_GCM,data:3fq+fdP/nCQw/kpssCK/t4rnbcG7o3TIQtkMfpBpfNBGp59d4+2BQBufyocl1u4oYOMlz9pGl1ruNhCDhiuBNqC+wVl81+HegiJQPeCDTSChpT0V8OwQx+ChpIjUeZ69zjZB/bm5CSvdAO1JHpS5OXeYWlNrTVI+dqJbRw==,iv:KuermVl/VG1z2K6kFQH/ELqxlchjJsljmuZ3CwsaEec=,tag:+XFz6LESwaCP0j1rkbb98A==,type:comment]
+    #ENC[AES256_GCM,data:c3dK7vloyCAmFh/VL/0bh65WD2idxuMX37Z8Q6LC6FE/YIdCRbyO6rnFgp3dHqHaI4dXbUfXW7WGkh3n9rbvORPsNu4E5psgzzV4wQWo07o=,iv:xNCx7CURwU16xX3Nnkh67Cf7Ra2pVNpUCgxACD8qu0I=,tag:2UhttJieeNLxZV7fni/6pQ==,type:comment]
+    #ENC[AES256_GCM,data:cVUWXyP3CDGbuF+lO4E3ndF6wecwVD+dAHdoffyUSlfjzty2LPXxivN0hFf0BK6nvffdjAxg,iv:HBOMoUtb06iGptSbsGk8FFsH9ABtbDWfk0szxZZRNEk=,tag:eLKrHP5aisCqGimhpBvVrw==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:em7fIUsxRtexQVy9,iv:QbBRZBccpag9Foyau6R3fTTaJ5Rn7UhuDZ9VSWKQgwI=,tag:JJvFrzY8cw225Qrnyhz0IA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:tuyY3yMkT4i9gWsdZPFEzK8=,iv:5xaIk/nzIvC127Iljlrl8mHmrTfMZD+zs0j97GM/LJg=,tag:mFfRwXS6lXLeQ5et77EVQg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:3++YsOEzERWVW99J/e3KO67OPTKLPFNZ60nByhfKPgY=,iv:F8wskIwD/2BnLotjzPEIJIM1ntMfrSBgkXcaeyY2qk0=,tag:LnflXyE5ID2nqBvWzgEPQg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6OH7g8vIxhuB5gDfeOIC5ZsKgG+Y2KmpTLuNOCf5fEqXXs67zZbelg==,iv:AT2bmmkswRgIiY3+wdDZAjjb9nWVW5p8+h0qz80UEYw=,tag:2JCUxAAYXsjezdSOaJf73g==,type:str]
+    #ENC[AES256_GCM,data:JY8PeDpqJAZf4CCjSheuO7S1S6GROzSdrSNHTey2y6Z268YBqSe8VXoENOepWivtexkHBTgd27WhOd+n0anaqg==,iv:hjmVsIvqEmSpuh0IS8HqXOKONb6B5pt8DSIVaP/noQ0=,tag:SE2KmRD+OTJvB5uWNlF9gg==,type:comment]
+    #ENC[AES256_GCM,data:Jy7l+NZw6uvX770eOheIxSD2v07+k/0zbfT8YCYbx1Lgww55DQH3nkTXjLAzTLzmyXcZkdAXAWw=,iv:I+UQ9m2BcC7R295+34/hC+rRGnKDLxeyWv1H/HiDFEE=,tag:TQ0KYi1TjaHz4KWG0PH/gw==,type:comment]
+    #ENC[AES256_GCM,data:4NC3xmBxSLtv1I5iAU2uy/LV0cnYOPEytw==,iv:JCzYGOSf9eecAiSBrLFIcsFQvsuZleFBK/X/JzYzlSA=,tag:rQVn4clx6uuPXx831B9Img==,type:comment]
+    #ENC[AES256_GCM,data:LpnfbWMLRCnekJV11G7lblfUn3gcAhrVFw4LudylMAred6wyIxq9GrR2204VVrwj+ddd7tI8aQu/O1lLACbcifnBeVOwvVVx/I5fGXw=,iv:4wVbyN3mumFHuyOlNVM+tcOjQeRF+9NR6fhD66kgn58=,tag:oHFGFZSJNZGNqbmzOe5NcA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:qP8Tjiutr8YH2BiLNisCT7Lsz22Ho4IgVQ4DWzfD6FSs30XdWIRmrrC3m+NMD1oA,iv:fTdw7NwtOcIFMKtVfarwHYL9sF1MPgNyBD+cXvcf15o=,tag:GtOX5DAybZunM4GGmDAglw==,type:str]
+    #ENC[AES256_GCM,data:SJ6ZnMhIPLyf51miM8XhY36ivaeA+3QSxCWPhucAORZjwiCL52As4ICz05pyVflCOo0YChobfth1qiUQZtyjSKiXEP2GBe8=,iv:Zyv0V3/C+VNjpu2cFwlrFtNfuW30vt8XJmLXjJ9PNiU=,tag:97+fabf9mFZ1w07sfy/M4g==,type:comment]
+    #ENC[AES256_GCM,data:9Gnc9EDX0xbvrist1WEdMPbPy66x/odpFyN6A+Qb5Y0peAlsaPFBh7qvilPdPuTCFYhGMeAq,iv:SkFiB2Vg6hO9eRzSYBjknbFFzLaEzCuBy4mbE0e39kg=,tag:7hF43JOrG6wSsgqOhxDlEA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:vOngXHyA4g==,iv:VXrMBChjPBrbN62QJjsd+rTYKGULx5HzdmPkY5g7cFY=,tag:7Q+ECvwnjrtFPwOluw2qSA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:6Ww5ddoh+BGfju7vNclOmu34nrM=,iv:tRy81qSmvw3/vhtSxnlKnGbjh2EwgXazg9fCJhUHfBQ=,tag:6/pZZI9Hby0NxWQfWB+NXQ==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:p0G6V0y8AnjipkI=,iv:vkUs1tiwi+/Y4zmwR4nfNrF+pWkrLQ5fuIG2YrDNDtg=,tag:11xR2RpnM4j/RcB10cx/Cg==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:TR74RNWIidoeVzGwWl2Y,iv:TJgm7y+vjwwmmEE3UlI4aG2q8urhcESe2YV+6TuGRjE=,tag:5hJuWB7k8aTfwPUBALwplg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:i1uP9FVdgDxS5/nUHDnGNWuhcFvSVJ6/3Q==,iv:O7kGMrgrQi+74W9Jb+Gn7nNiMg/QGu1KLCwaI91dr40=,tag:4nkDGS8c9BNP2H28ybsgug==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:fM1OpneQucOXaABv0b1HduqKx2Ct/8dyDp1GHvKHmA==,iv:bRa8joStuQuvYlvvIDyt/Ikf81FPJXa/Djl8IDX0EBQ=,tag:0/c4JLDQOQUVfZbpnRRerQ==,type:str]
+    #ENC[AES256_GCM,data:VsF1/OFkK6Y/jUytFs9hum9QfiOKgZjpgND1j+oE172DWgm37Jg=,iv:ozytwfoxXCkwoG4DT9Uuky4SGlbkAJbL4HvBZ3DTyt4=,tag:maL3F/DicVDQAzzavrFfow==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:3LBtIUhpZbQS8d3KQr2LS9/Zc8M=,iv:5M81alkmVxUIwhUv0pm4SvaBKNEFiKygXBAWIGRc+2o=,tag:iGYO8S+beu+2F1FZh7Rk+A==,type:str]
+    #ENC[AES256_GCM,data:6pW7QoBaRzOzd0gNl80=,iv:caMiATDym3IYENsXOjWM009E/Mr6kHTUvMZ4TGXiB6Q=,tag:Qzo9ciNrrrbiil1b5cnGjg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:inbYmi9t+IhGnIbRCw==,iv:lxuBcIMHzCy058jssl3Et+XQ48+Oqz1UPQFO7jx6YzQ=,tag:5QyDZ3zSqQtxUj1sOJ8l5g==,type:str]
+    SVCNET: ENC[AES256_GCM,data:Q6uFL16guArID6cQ7g==,iv:OJsbmIutCYLx0qUbFMQECSDoNVlAjS/YRRp4u1L//jU=,tag:C7o4qRWHDO/6PdgG7bJowQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:1dGSIw==,iv:Z3pde1TLsM7eZefFLdH/zG26aYyqSZ/xyyH2ydCrDhI=,tag:XxY4GdNXc12DBaM27J1mxA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvd2dnLzR2ZFRsak9MUEpu
-            NDN2UFZ3TXJ4K0JWSk4rNWliUVdFRWlMaUg0CllYNHVPeWhnbjhiamR0TjM2aVZp
-            cGNZYXM1NS9TSkRRb0dUeHRZN09NQkEKLS0tIHBFSnpweEZwZTNWWEFNUXB2eFlw
-            SGVOYjFqeGxaMXNUdVhOQUEvLytudm8KeU2W8tqX8YRcG2jTNhoYKafOmz/buzQN
-            rij6GFoujkbkPGAwqCEou3Te3k23WEa3g5p9smaL3gieYUqD2EZl7A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBITDJJK1VJQTJnSmRocE0z
+            L3RFa05DMG5wR21tYVlUenVtaVptZTNHNnhzCmJ1WFlZemFKZlVBb0VPMjFHcnNT
+            SUNhMThjSWFLV1huMlNMRTZDQ04xQ0UKLS0tIHJBamE0WnZjOC9mS2p5Rnl1cHow
+            WXJ2U1dKYWxXckRqNEtQY3hlMkRLa2cKt2wFbF+TqjU9cCd57jLLwPrp9ohXgneL
+            57Oj1ZGujc2MnYWuz7BC/1YRYTKxLzhHfg1Njve7U3MilKmPF/u3fw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-18T22:46:41Z"
-    mac: ENC[AES256_GCM,data:h8xj4HnyMj7PA6tQ+Y+bxsyuusOGlWWZwbmuPQDwOfPUtpDv9RCZJGR8MiQhsSDfDi/dWnDCPk7Q2IaXa3MbEgb8VYBOqA5eUiHIfOpWdJ7qbgyrUDQfhv6CG+waXUGGvWgQcZMdYzMlpGFoopf2CeVKjkEWiGjb8Y1vF3FJTxA=,iv:xGrXNfTAc4ghKiXEvVBEg7YPbbMCnQJm/nhaWyUpgSE=,tag:H0jCAj9VtlmH5zSeo9F+/w==,type:str]
+    lastmodified: "2025-01-18T22:50:43Z"
+    mac: ENC[AES256_GCM,data:IqFgcxixjXkx+10vu2cm47fZRjFQBn8mzEQBBbQoYFEtlbANWxh0EccPutXulh1yulEca/mKp4GzT21KeZuuBcDHJPBNnYzDosBleaNOvDZ+GALhm0G5/q7j4uAmITSHwOOPSkEH7xmfby/G/i/NxA+TIUTAbeWcIPqGQWAME+Q=,iv:X1CYTBwSR/VXHmRMylLxBy31Tkh7d588cHelflk9voU=,tag:YvBA0DA2E0oZ2a2KqrtcXQ==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
